--- a/themes/hugo-simplecss/layouts/_default/baseof.html
+++ b/themes/hugo-simplecss/layouts/_default/baseof.html
@@ -3,6 +3,7 @@
 {{- partial "head.html" . -}}
 
 <body>
+    <link rel="stylesheet" href='{{ "css/simple.css/simple.min.css" | absLangURL }}'>
     {{- partial "header.html" . -}}
     <main>
         {{- block "main" . }}{{- end }}
